# PhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Bodies/: Body.cpp  Body.h  CollidingBody.cpp  CollidingBody.h  KinematicBody.cpp  KinematicBody.h  RigidBody.cpp  RigidBody.h  UserControlledBody.cpp  UserControlledBody.h
src/Collision/: CollisionDetectorIF.cpp  CollisionDetectorIF.h  CollisionResolverIF.cpp  CollisionResolverIF.h  CollisionResponseIF.cpp  CollisionResponseIF.h  ImpulseBasedCollisionResponse.cpp  ImpulseBasedCollisionResponse.h  MassBasedCollisionResolver.cpp  MassBasedCollisionResolver.h  SATCollisionDetector.cpp  SATCollisionDetector.h
src/DataTypes/: CollidingPair.h  CollisionResolutionInfo.h  CollisionResponseInfo.h  DampingInfo.h  ID.h  KinematicInfo.h  LayerMask.h  Position2D.h  RigidInfo.h  TriangleInfo.h  Vector2D.cpp  Vector2D.h
src/Engine/: EngineIF.cpp  EngineIF.h  RealisticEngine.cpp  RealisticEngine.h
src/Misc/BodyPointerHolders/: BodyPointerHolderIF.cpp  BodyPointerHolderIF.h  MapBasedBodyPointerHolder.cpp  MapBasedBodyPointerHolder.h
src/Misc/CircleRelatedClasses/: CircleHelper.cpp  CircleHelper.h
src/Misc/IDGenerators/: IncrementalUniqueIdGenerator.cpp  IncrementalUniqueIdGenerator.h  UniqueIDGeneratorIF.h
src/Settings/: Settings.cpp  Settings.h
src/Utils/: ConditionalDebug.cpp  ConditionalDebug.h  Exceptions.h  FileHolder.cpp  FileHolder.h  FlagClass.h  MathUtils.cpp  MathUtils.h  OneTimeUsable.cpp  OneTimeUsable.h  PointerHelper.h  Singleton.h
src/World/: CustomWorld.cpp  CustomWorld.h  World.cpp  World.h
(+17 files in other folders)
